@@ -5,3 +5,13 @@
 导入 CodeIgniter 2.2.0 版本至 /codeigniter/2.2.0
 新建 /web 文件夹作为项目入口
 ==================================================
+2014/09/23 17:13:00
+/static/css			[新建]
+/static/images		[新建]
+/static/js			[新建]
+/static/upload		[新建]
+新建静态文件目录
+==================================================
+2014/09/23 17:35:00
+配置项目入口文件 /web/index.php
+==================================================
